--- a/src/main/java/interfaces/AcademicInfoInter.form
+++ b/src/main/java/interfaces/AcademicInfoInter.form
@@ -115,6 +115,13 @@
   </Layout>
   <SubComponents>
     <Component class="javax.swing.JTextField" name="fechaIni">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="2000-10-31"/>
+      </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="fechaIniMouseClicked"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="fechaIniActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="titulo">
       <Events>
@@ -155,6 +162,12 @@
     <Component class="javax.swing.JTextField" name="centro">
     </Component>
     <Component class="javax.swing.JTextField" name="fechaFin">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="2000-10-31"/>
+      </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="fechaFinMouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel5">
       <Properties>
